# petey-web

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.standalone  Makefile  README.md  TODO.md  docker-compose.yml  par_rag_extract.py  pyproject.toml  requirements.txt  runs.json
.claude/: settings.local.json
.github/workflows/: build-desktop.yml  deploy-cloud-run.yml  publish-docker.yml
desktop/: build.sh  launch.py  petey.spec
parser/: Dockerfile  app.py  requirements.txt
schemas/: mci_schema_test.yaml
server/: app.py  auth.py  extract.py  par_extract.py  parse_client.py  runs.py  settings.py  validate_keys.py
static/: dropzone.js  footer.js  navbar.js
static/demo/: des_moines_sample_output.csv  ptr_sample_output.csv  tax_roll_sample_output.csv
templates/: about.html  builder.html  demos.html  guide.html  keys.html  par.html  par_debug.html  runs.html  schema_tutorial.html  settings.html  settings_advanced.html  template_builder.html
tests/: test_desktop.py  test_extract.py  test_extract_routing.py  test_local_parsing.py  test_parse_client.py  test_parser.py  test_runs.py  test_text_mode.py  test_ux_improvements.py  test_validate_keys.py
