[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petey-web"
version = "0.1.0"
description = "Web interface for Petey PDF Extractor"
requires-python = ">=3.11"
dependencies = [
    "petey @ file:///Users/user/Documents/code/petey",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["server*"]
