[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "petey-web"
version = "0.1.0"
description = "Web interface for Petey PDF Extractor"
requires-python = ">=3.11"
dependencies = [
    "petey",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pyyaml",
    "firebase-admin",
    "google-cloud-firestore",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["server*"]
